fixed navbar dropdown; reformatted the image/paragraphs section to column and rows, spacing fixed in both views; made card images shrink in small view; changed footer text

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -17,8 +17,7 @@
 }
 
 .hulkPic {
-	max-width: 75%;
-	max-height: 75%;
+	max-width: 81vw;
 }
 
 .spideyImage {
